tests/ui/methods/method-value-without-call.stderr
error[E0615]: attempted to take value of method `abs` on type `i32`
  --> $DIR/method-value-without-call.rs:21:20
   |
LL |     let _f = 10i32.abs;
   |                    ^^^ method, not a field
   |
help: use parentheses to call the method
   |
LL |     let _f = 10i32.abs();
   |                       ++

error[E0615]: attempted to take value of method `get_x` on type `Point`
  --> $DIR/method-value-without-call.rs:25:27
   |
LL |     let px: isize = point.get_x;
   |                           ^^^^^ method, not a field
   |
help: use parentheses to call the method
   |
LL |     let px: isize = point.get_x();
   |                                ++

error[E0615]: attempted to take value of method `filter_map` on type `Filter<Map<std::slice::Iter<'_, {integer}>, main::{closure _::map#0}>, main::{closure _::filter#0}>`
  --> $DIR/method-value-without-call.rs:33:10
   |
LL |         .filter_map;
   |          ^^^^^^^^^^ method, not a field
   |
help: use parentheses to call the method
   |
LL |         .filter_map(_);
   |                    +++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0615`.
